--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <canvas id="screen" width="800" height="600"></canvas>
   </div>
 
-  <script type="module" src="ts/index.ts"></script>
+  <script type="module" src="index.ts"></script>
 </body>
 
 </html>
